--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 
 <mat-toolbar style=" outline: white solid 5px; color: aliceblue;background-image: url('https://media.giphy.com/media/xTiTnxpQ3ghPiB2Hp6/giphy.gif');">
-    <h1>Task Management System</h1>
+    <h1 style="color: red;">Task Management System </h1>
 </mat-toolbar>
 <!-- jhwjh -->
